--- a/config/database.yml
+++ b/config/database.yml
@@ -11,6 +11,11 @@ default: &default
   username: <%= ENV.fetch("POSTGRES_USER") { "postgres" } %>
   password: <%= ENV.fetch("POSTGRES_PASSWORD") { "postgres" } %>
   host: <%= ENV.fetch("POSTGRES_HOST") { "localhost" } %>
+  port: <%= ENV.fetch("POSTGRES_PORT") { 5432 } %>
+  sslmode: <%= ENV.fetch("POSTGRES_SSL_MODE") { "prefer" } %>
+  connect_timeout: 2
+  variables:
+    statement_timeout: 10000
 
 development:
   <<: *default
