--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+# Ignore screenshots from system tests
+/tmp/screenshots/*
+!/tmp/screenshots/.keep
